--- a/src/view/MASTER/empleados.html
+++ b/src/view/MASTER/empleados.html
@@ -28,7 +28,7 @@
 <div class="container mt-2">
     <h2 class="text-center mb-4">Información de empleados</h2>
     <button class="btn btn-success mb-2" type="button" onclick="loadData()" data-bs-toggle="modal" data-bs-target="#employeeModal">Agregar empleado</button>
-    <table class="table table-striped">
+    <table class="table table-striped" id="myTable">
         <thead>
             <tr class="table-dark">
                 <th>Id</th>
@@ -177,7 +177,6 @@
     </div>
   </div>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 <script src="/src/js/controller/MASTER/employeeController.js"></script>
