--- a/src/view/RAPE/verProyecto.html
+++ b/src/view/RAPE/verProyecto.html
@@ -125,6 +125,85 @@
       </div>
     </div>
   </div>
+
+
+
+  <!-- Modal de Actualización de proyecto -->
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="taskModalLabel">Actualizar proyectos</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="updateForm">
+          <input type="hidden" id="id">
+          <div class="mb-3">
+            <label for="u_name" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="u_name" required>
+          </div>
+            
+              <div class="mb-3">
+                <label for="u_identifier" class="form-label">Identificador del Proyecto</label>
+                <input type="text" class="form-control" id="u_identifier" required>
+              </div>
+           
+              <div class="mb-3">
+                <label for="u_estimatedDate" >Fecha estimada de finalización del Proyecto</label>
+                <input type="date" id="u_estimatedDate" class="form-control">
+              </div>
+
+          
+          <div class="mb-3">
+            <label for="u_employeeListRape" class="form-label">Responsable del Proyecto</label>
+            <select type="text" name="u_employeeListRape" id="u_employeeListRape" class="form-select">              
+            </select>
+          </div>
+
+          <div class="mb-3">
+            <label for="u_employeeListRd" class="form-label">Responsable de desarrollo</label>
+            <select type="text" name="u_employeeListRd" id="u_employeeListRd" class="form-select">              
+            </select>
+          </div>
+
+          <div class="mb-3">
+            <label for="u_employeeListAp1" class="form-label">Primer analista programador</label>
+            <select type="text" class="u-employee-ap form-select" name="u_employeeListAp1" id="u_employeeListAp1">              
+            </select>
+          </div>
+
+          <div class="mb-3">
+            <label for="u_employeeListAp2" class="form-label">Segundo analista programador</label>
+            <select type="text" class="u-employee-ap form-select" name="u_employeeListAp2" id="u_employeeListAp2" >              
+            </select>
+          </div>
+
+          <div class="mb-3">
+            <label for="u_employeeListAp3" class="form-label">Tercer analista programador</label>
+            <select type="text" class="u-employee-ap form-select" name="u_employeeListAp3" id="u_employeeListAp3">              
+            </select>
+          </div>
+
+          <div class="mb-3">
+            <label for="u_employeeListAp4" class="form-label">Cuarto analista programador</label>
+            <select type="text" class="u-employee-ap form-select" name="u_employeeListAp4" id="u_employeeListAp4">              
+            </select>
+          </div>
+            
+            <div class="row">
+              <div class="col-6">
+                <button type="button"  onclick="updateProject()"  class="btn btn-success w-100" data-bs-dismiss="modal">Registrarse</button>
+              </div>
+              <div class="col-6">
+                <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Cancelar</button>
+              </div>
+            </div>
+          </form>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="/src/js/controller/RAPE/projectController.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
