--- a/src/view/RAPE/verProyecto.html
+++ b/src/view/RAPE/verProyecto.html
@@ -204,6 +204,33 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="finishModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="taskModalLabel">Finalizar proyecto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <form id="updateForm">
+            <input type="hidden" id="id">
+            <div class="mt-4 mb-5">
+              <h5 class="text-center">¿Estás seguro de finalizar el proyecto?</h5>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <button type="button" onclick="finishProject()" class="btn btn-primary w-100" data-bs-dismiss="modal">Finalizar proyecto</button>
+              </div>
+              <div class="col-6">
+                <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </div>  
+            </form>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="/src/js/controller/RAPE/projectController.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
