--- a/src/view/RAPE/verProyecto.html
+++ b/src/view/RAPE/verProyecto.html
@@ -231,7 +231,7 @@
     </div>
   </div>
 </div>
-<script src="/src/js/controller/RAPE/projectController.js"></script>
+<script src="/src/js/controller/RAPE/project.controller.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
