--- a/src/view/MASTER/empleados.html
+++ b/src/view/MASTER/empleados.html
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-light" aria-current="page" href="verProyecto.html">Proyectos</a>
+            <a class="nav-link text-light" aria-current="page" href="src/view/RAPE/verProyecto.html">Proyectos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" href="empleados.html">Empleados</a>
