--- a/src/view/RD/verProyecto.html
+++ b/src/view/RD/verProyecto.html
@@ -17,9 +17,6 @@
               <li class="nav-item">
                 <a class="nav-link text-light" aria-current="page" href="verProyecto.html">Proyectos</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="empleados.html">Empleados</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -38,6 +35,7 @@
                 <th>Fecha de Terminación</th>
                 <th>Estatus</th>
                 <th>Fase Actual</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody id="tbody">
