--- a/src/view/MASTER/proyecto.html
+++ b/src/view/MASTER/proyecto.html
@@ -114,7 +114,7 @@
               
               <div class="row">
                 <div class="col-6">
-                  <button type="button"  onclick="saveProject()"  class="btn btn-success w-100" data-bs-dismiss="modal">Registrarse</button>
+                  <button type="button"  onclick="saveProject()"  class="btn btn-success w-100" data-bs-dismiss="modal">Registrar</button>
                 </div>
                 <div class="col-6">
                   <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Cancelar</button>
@@ -193,7 +193,7 @@
             
             <div class="row">
               <div class="col-6">
-                <button type="button"  onclick="updateProject()"  class="btn btn-success w-100" data-bs-dismiss="modal">Registrarse</button>
+                <button type="button"  onclick="updateProject()"  class="btn btn-primary w-100" data-bs-dismiss="modal">Actualizar</button>
               </div>
               <div class="col-6">
                 <button type="button" class="btn btn-secondary w-100" data-bs-dismiss="modal">Cancelar</button>
