--- a/src/view/RAPE/VisualizacionTarea.html
+++ b/src/view/RAPE/VisualizacionTarea.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestión de Tareas por Proyecto y Fase</title>
+  <title>Resumen de tareas</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
@@ -29,9 +29,6 @@
           <li class="nav-item">
             <a class="nav-link text-light" aria-current="page" href="verProyecto.html">Proyectos</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="empleados.html">Empleados</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -39,7 +36,7 @@
 
   <div class="container mt-3">
     <div>
-      <h2 class="text-center mb-4">Gestión de Tareas por Proyecto y Fase</h2>
+      <h2 class="text-center mb-4">Resumen de Tareas</h2>
     </div>
 
     <!-- Lista de Proyectos y Fases -->
@@ -59,6 +56,7 @@
   </div>
 
 <script src="/src/js/controller/RAPE/task.controller.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
