--- a/src/view/RAPE/verProyecto.html
+++ b/src/view/RAPE/verProyecto.html
@@ -17,9 +17,6 @@
               <li class="nav-item">
                 <a class="nav-link text-light" aria-current="page" href="verProyecto.html">Proyectos</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="empleados.html">Empleados</a>
-              </li>
             </ul>
           </div>
         </div>
@@ -73,6 +70,7 @@
   </div>
 </div>
 <script src="/src/js/controller/RAPE/project.controller.js"></script>
+<script src="/src/js/controller/RAPE/task.controller.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
