--- a/src/view/RD/VisualizacionTarea.html
+++ b/src/view/RD/VisualizacionTarea.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestión de Tareas por Proyecto y Fase</title>
+  <title>Gestión de Tareas</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
@@ -29,9 +29,6 @@
           <li class="nav-item">
             <a class="nav-link text-light" aria-current="page" href="verProyecto.html">Proyectos</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="empleados.html">Empleados</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -39,7 +36,7 @@
 
   <div class="container mt-3">
     <div>
-      <h2 class="text-center mb-4">Gestión de Tareas por Proyecto y Fase</h2>
+      <h2 class="text-center mb-4">Gestión de Tareas</h2>
       <button class="btn btn-success mb-2" data-bs-toggle="modal" data-bs-target="#taskModal">Agregar Tarea</button>
     </div>
 
