--- a/src/view/AP/verProyecto.html
+++ b/src/view/AP/verProyecto.html
@@ -17,6 +17,15 @@
               <li class="nav-item">
                 <a class="nav-link text-light" aria-current="page" href="verProyecto.html">Proyectos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" aria-current="page" href="perfil.html">Perfil</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <span class="navbar-text text-light" id="nombreDeUsuario"></span>
+                <button onclick="logout()" class="btn bg-black" ><i class="bi bi-box-arrow-right text-light"></i></button>
+              </li>
             </ul>
           </div>
         </div>
@@ -67,6 +76,7 @@
   </div>
 </div>
 <script src="/src/js/controller/AP/project.controller.js"></script>
+<script src="/src/js/controller/logout.controller.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
