--- a/src/view/MASTER/empleados.html
+++ b/src/view/MASTER/empleados.html
@@ -4,6 +4,8 @@
     <title>Información de empleados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.min.css" rel="stylesheet">
+    
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-black">
@@ -13,7 +15,6 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <!-- Menú principal a la izquierda -->
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link text-light" aria-current="page" href="proyecto.html">Proyectos</a>
@@ -21,13 +22,14 @@
           <li class="nav-item">
             <a class="nav-link text-light" href="empleados.html">Empleados</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" aria-current="page" href="perfil.html">Perfil</a>
+          </li>
         </ul>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <span class="navbar-text text-light" id="nombreDeUsuario"></span>
-          </li>
-          <li class="nav-item">
-            <button style="background-color: black; color: aliceblue;"><i class="bi bi-box-arrow-right"></i></button>
+            <button onclick="logout()" class="btn bg-black" ><i class="bi bi-box-arrow-right text-light"></i></button>
           </li>
         </ul>
       </div>
@@ -183,6 +185,7 @@
     </div>
   </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.5/dist/sweetalert2.all.min.js"></script>
 <script>
 const username=localStorage.getItem('username');
 document.getElementById('nombreDeUsuario').textContent = username;
@@ -190,4 +193,5 @@ document.getElementById('nombreDeUsuario').textContent = username;
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 <script src="/src/js/controller/MASTER/employee.controller.js"></script>
+<script src="/src/js/controller/logout.controller.js"></script>
 </html>
