--- a/src/view/MASTER/proyecto.html
+++ b/src/view/MASTER/proyecto.html
@@ -20,6 +20,15 @@
               <li class="nav-item">
                 <a class="nav-link text-light" href="empleados.html">Empleados</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" aria-current="page" href="perfil.html">Perfil</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <span class="navbar-text text-light" id="nombreDeUsuario"></span>
+                <button onclick="logout()" class="btn bg-black" ><i class="bi bi-box-arrow-right text-light"></i></button>
+              </li>
             </ul>
           </div>
         </div>
@@ -68,6 +77,11 @@
                 <div class="mb-3">
                   <label for="identifier" class="form-label">Identificador del Proyecto</label>
                   <input type="text" class="form-control" id="identifier" required>
+                </div>
+
+                <div class="mb-3">
+                  <label for="startDate" >Fecha de inicio del Proyecto</label>
+                  <input type="date" id="startDate" class="form-control">
                 </div>
              
                 <div class="mb-3">
@@ -150,6 +164,11 @@
               </div>
            
               <div class="mb-3">
+                <label for="u_startDate" >Fecha de inicio del Proyecto</label>
+                <input type="date" id="u_startDate" class="form-control">
+              </div>
+
+              <div class="mb-3">
                 <label for="u_estimatedDate" >Fecha estimada de finalización del Proyecto</label>
                 <input type="date" id="u_estimatedDate" class="form-control">
               </div>
@@ -231,7 +250,12 @@
     </div>
   </div>
 </div>
+<script>
+  const username=localStorage.getItem('username');
+  document.getElementById('nombreDeUsuario').textContent = username;
+  </script>
 <script src="/src/js/controller/MASTER/project.controller.js"></script>
+<script src="/src/js/controller/logout.controller.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
